--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,15 @@ body {
   align-items: center;
 }
 
+h2 {
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+p {
+  font-size: 15px;
+}
+
 .auth-modal {
   background-color: rgb(255, 255, 255);
   width: 360px;
@@ -49,4 +58,30 @@ body {
 .auth-modal .form-button:hover {
   color: rgb(48, 48, 48);
   border: rgb(48, 48, 48) solid 2px;
+}
+
+.auth-modal .link-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.auth-modal .link-container img {
+  width: 170px;
+  margin: 5px;
+}
+
+.close-icon {
+  float: right;
+}
+
+input[type="text"],
+input[type="password"] {
+  border: none;
+  outline: 1px solid rgb(153, 149, 149);
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  border: none;
+  outline: 1px solid rgb(255, 64, 153);
 }
